[11.21] released ...
* When mail is sent using SMTP, 'Bcc:' fields are not passed to the
  server anymore (Bugreport by Matthew Fischer.)
* The new 'sendcharsets' variable was incorrectly named 'charsets' in
  nail.rc in the last version. If nail 11.20 was the first version of
  nail you ever installed, you should correct this by hand since the
  file is not overwritten by 'make install'. (Bugreport by Matthew
  Fischer.)

[11.20] released 1/13/05
* A 'forward-as-attachment' variable has been introduced. If it is set,
  the 'forward' command uses a MIME 'message/rfc822' attachment for the
  original message instead of including it in the newly created text.
* The character set to be used for outgoing messages can now be specified
  with the 'sendcharsets' variable. It can contain multiple values, with
  the first appropriate one being used to send the message. The 'charset'
  variable is still accepted but has been removed from the documentation.
* If 'sendcharsets' contains more than one character set name, the '~@'
  tilde escape now asks about character sets for individual attachments
  if it is invoked without arguments.
* If neither the 'sendcharsets' nor the 'charset' variable is set, the
  character set for outgoing messages that contain non-ASCII characters is
  now 'utf-8' instead of 'iso-8859-1'.
* When the 'encoding' variable was set to '8bit' and a message contained
  characters that were not representable in the outgoing character set
  in its body but not in its header, the characters were replaced by
  question marks and the message was sent, instead of being rejected
  (Bugreport by Suresh Ramasubramanian).
* When sending messages in 8bit, conversions from a multibyte terminal
  character set failed because multibyte input characters where split
  across two conversion buffers if they spanned across buffer boundaries.
* A 'reply-in-same-charset' variable has been introduced. If it is set,